# spt-reporting

./: .gitignore  .pre-commit-config.yaml  AppImageBuilder.yml  Dockerfile  README.md  config.py  pyproject.toml  requirements.txt  settings.json  settings.toml  spt_reporting.py  test_report.txt
Doc/: NewPatientFlow.md  main.md  stack.md
app/: main.py  new_patient_form.py  patient.py  report_generator.py  safe_write.py
app/reporting/: fill_template.py  generate_report.py  output.html  template_report.html
app/reporting/styles/: style_report.css
app/resources/: app.desktop
app/ui/: main.ui  main_controller.py  main_controller.ui  new_patient.py  new_patient.ui  settings_dialog.py  settings_dialog.ui  stack_controller.py
tests/: __init__.py  conftest  conftest.py  test_main.py  test_new_patient.py  test_patient.py  test_patient_flow.py  test_person.py  test_save_write.py  test_stack_controller.py
tests/data/: test_patient_id
