[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
line-length = 120

[tool.flake8]
ignore = "E203, E266, E501, W503"
max-complexity = 15
max-line-length = 120

[tool.poetry]
authors = ["William Hogg <wfhogg53@outlook.com>"]
description = "A simple UI to produce Skin Prick Test reports"
name = "spt-reporting"
version = "0.1.0"

[tool.poetry.dependencies]
appimage-builder = "*"
automat = "^22.10.0"
black = "*"
dynaconf = "*"
flake8 = "*"
jinja2 = "*"
pre-commit = "*"
pydantic = "*"
pyinstaller = "*"
pyqt5-qt5 = "5.15.2"
pytest = "*"
pytest-flake8 = "*"
pytest-qt = "*"
python = "3.11.6"
validate-pyproject = "^0.16"
weasyprint = "*"
pyqt5 = "^5.15.10"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = [
    "tests"
]
plugins = ["qt-4.3.1", "flake8-1.0.7"]
