[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
line-length = 120

[tool.flake8]
ignore = "E203, E266, E501, W503"
max-complexity = 15
max-line-length = 120

[tool.poetry]
authors = ["William Hogg <wfhogg53@outlook.com>"]
description = "A simple UI to produce Skin Prick Test reports"
name = "spt-reporting"
version = "0.1.0"

[tool.poetry.dependencies]
appimage-builder = "^1.1.0"
automat = "^22.10.0"
black = "^24.1.1"
dynaconf = "^3.2.4"
flake8 = "^7.0.0"
jinja2 = "^3.1.3"
pre-commit = "^3.6.0"
pydantic = "^2.6.0"
pyinstaller = "^6.3.0"
pyqt5-qt5 = "5.15.2"
pytest = "^8.0.0"
pytest-flake8 = "^1.1.1"
pytest-qt = "^4.3.1"
python = "3.11.6"
validate-pyproject = "^0.16"
weasyprint = "^60.2"
pyqt5 = "^5.15.10"
coverage = "^7.4.1"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = [
    "tests"
]
plugins = ["qt-4.3.1", "flake8-1.0.7"]
